# shelter-demo

./: README.md  dogs_data.json  pyproject.toml
config/: settings.py  urls.py
dogs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_dog_sex.py  0003_alter_dog_sex.py  0004_alter_dog_sex.py  0005_alter_dog_sex.py
dogs/templates/dogs/: base.html  breed.html  breeds.html  dog.html  dog_confirm_delete.html  dog_form.html  dogs.html
dogs/templatetags/: custom_tags.py
