[tool.poetry]
name = "shelter-demo"
version = "0.1.0"
description = ""
authors = ["ShadeSWD <seawolfy60@gmail.com>"]
readme = "README.md"
packages = [{include = "shelter_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.1"
psycopg2 = "^2.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
